fixed desktop layout by adding divs for spacing.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -99,7 +99,11 @@ p {
     .container {
         display: flex;
         flex-direction: row;
-        max-width: 45%;
+        max-width: 38%;
+        height: 35vh;
     }
 
+    .section-container {
+        justify-content: space-around;
+    }
 }
